...
    let kind: String = "TodoWidget"

    var body: some WidgetConfiguration {
        StaticConfiguration(kind: kind, provider: Provider()) { entry in
            TodoWidgetEntryView(entry: entry)
        }
        .configurationDisplayName("My Tasks")
        .description("View your active tasks for the day.")
        .supportedFamilies([.systemSmall, .systemMedium])
    }
}

